attempt to fix padding bug on safari

--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body {
     width: 100%;
     font-family: 'Lato', sans-serif;
     color: #333;
+    line-height: normal;
 }
 
 .outer,
